--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ffffff; /* Белый фон */
+            background-color: #F6F6F6; /* темноБелый фон */
             color: #000000; /* Черный текст */
         }
 
         header {
-            background-color: #1a237e; /* Темно-синий фон шапки */
+            background-color: #6D6D6D; /* Темно-серый фон шапки */
             color: #ffffff; /* Белый текст в шапке */
             padding: 10px;
             text-align: center;
         }
 
         nav {
-            background-color: #3f51b5; /* Средне-синий фон навигационного меню */
+            background-color: #BBBBBB; /* Средне-серый фон навигационного меню */
             color: #ffffff; /* Белый текст в навигационном меню */
             padding: 10px;
         }
@@ -47,7 +47,7 @@
         /* Добавьте стили для остальных блоков по аналогии */
 
         footer {
-            background-color: #1a237e; /* Темно-синий фон подвала */
+            background-color: #6D6D6D; /* Темно-серый фон подвала */
             color: #ffffff; /* Белый текст в подвале */
             padding: 10px;
             text-align: center;
