--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProgGenius Academy</title>
+    <title>Strimyanka Squad Market</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <!-- Ваша ссылка на ваши стили CSS здесь -->
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 17259; /* Гарнитура шрифта */
+            src: url(fonts/17259.ttf); /* Путь к файлу со шрифтом */
             margin: 0;
             padding: 0;
             background-color: #F6F6F6; /* темноБелый фон */
