--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
     <header>
-        <h1>ProgGenius Academy</h1>
+        <h1>Strimyanka Squad Market</h1>
     </header>
 
     <nav>
