--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="content">
               <div class="content-txt">
                 <h1>МЕРЧ ЧЕРВЕЙ</h1>
-                <h2>Наш первый меч в лимитированной колллекции, успей купить!</h2>
+                <h2>Наш первый мерч в лимитированной колллекции, успей купить!</h2>
               </div>
             </div>
             <div class="image">
